--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:title" content="Dynamic ID Card Generator - Create Professional ID Cards Online">
     <meta property="og:description" content="Generate multiple professional ID cards from CSV data with drag-and-drop design tools, custom templates, and batch processing.">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="apple-touch-icon.png">
+    <meta property="og:image" content="https://dynamic-id-card-generator.vercel.app/apple-touch-icon.png">
     <meta property="og:url" content="index.html">
 
     <!-- Favicon -->
